--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" sizes="256x256" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="256x256" href="/favicon.png" />
 
     <title>AntiDox | Blur Faces In Your Photos</title>
     <meta
